--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ addons:
     packages:
     - cmake
     - libboost-all-dev
+    - g++-4.8
+    - gcc-4.8
 
 cache:
   apt: true
@@ -23,6 +25,7 @@ cache:
 before_install:
   - git clone https://github.com/agra-uni-bremen/dependencies.git
   - export BOOST_ROOT=/usr
+  - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
   - ./bootstrap.sh --deps deps/ --travis -m RELEASE build/
 
 before_script:
