--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ sudo: false
 
 compiler:
   - gcc
+  - clang
 
 addons:
   apt:
@@ -11,22 +12,26 @@ addons:
     - kalakris-cmake
     - ubuntu-toolchain-r-test
     - boost-latest
+    - llvm-toolchain-precise-3.5
     packages:
     - cmake
     - libboost1.55-all-dev
     - g++-4.8
     - gcc-4.8
+    - clang-3.5
 
 cache:
   apt: true
   directories:
-  - deps
+  - deps-gcc
+  - deps-clang
 
 before_install:
   - git clone https://github.com/agra-uni-bremen/dependencies.git
   - export BOOST_ROOT=/usr
-  - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8"; fi
-  - ./bootstrap.sh --deps deps/ --travis -m RELEASE build/
+  - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8" DEPS="deps-gcc"; fi
+  - if [[ "${CXX}" == "clang++" ]]; then export CXX="clang++-3.5" CC="clang-3.5" DEPS="deps-clang"; fi
+  - ./bootstrap.sh --deps ${DEPS} --travis -m RELEASE build/
 
 before_script:
   - cd build
