update CMakeLists to link Z3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -175,7 +175,10 @@ if(Z3_FOUND)
     set(Z3_LIBRARIES ${Z3_LIBRARIES} gomp)
   endif()
 
-  set(Z3_LIBRARIES ${Z3_LIBRARIES} rt pthread)
+  find_library(RT_LIB rt)
+  find_package(Threads QUIET)
+
+  set(Z3_LIBRARIES ${Z3_LIBRARIES} ${RT_LIB} ${CMAKE_THREAD_LIBS_INIT})
 
   include(CheckCXXSourceRuns)
 
