--- a/.travis.yml
+++ b/.travis.yml
@@ -13,46 +13,43 @@ addons:
   apt:
     sources:
     - kalakris-cmake
-    - ubuntu-toolchain-r-test
     - boost-latest
     - llvm-toolchain-precise-3.5
     packages:
     - cmake
-    - libboost1.55-all-dev
-    - g++-4.8
-    - gcc-4.8
+    - libboost1.55-dev 
+    - libboost-system1.55-dev
+    - libboost-iostreams1.55-dev
+    - libboost-python1.55-dev
+    - libboost-thread1.55-dev
+    - libboost-filesystem1.55-dev
     - clang-3.5
   coverity_scan:
     project:
       name: "hoangmle/metaSMT"
       description: "Build submitted via Travis CI"
     notification_email: hle@informatik.uni-bremen.de
-    build_command_prepend: "./bootstrap.sh --deps ${DEPS} --free --non-free --academic -m RELEASE build"
-    build_command:   "make -C build"
+    build_command_prepend: "./bootstrap.sh --deps deps --academic -m RELEASE build"
+    build_command:   "make -C build -j"
     branch_pattern: coverity_scan
 
 cache:
   apt: true
   directories:
-  - deps-gcc
-  - deps-clang
+  - deps
 
 before_install:
   - git clone https://github.com/agra-uni-bremen/dependencies.git
-  - export BOOST_ROOT=/usr
-  - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8" DEPS="deps-gcc"; fi
-  - if [[ "${CXX}" == "clang++" ]]; then export CXX="clang++-3.5" CC="clang-3.5" DEPS="deps-clang"; fi
-  - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then ./bootstrap.sh --deps ${DEPS} --free --non-free --academic -m RELEASE build; fi
+  - export BOOST_ROOT=/usr CXX="clang++-3.5" CC="clang-3.5"
 
-before_script:
-  - cd build
+install:
+  - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then ./bootstrap.sh --deps deps --free --non-free --academic -m RELEASE build; fi
 
 script: 
-  - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then make; fi
+  - if [ "${COVERITY_SCAN_BRANCH}" != 1 ]; then make -C build -j; fi
 
 after_success:
-  - make test
+  - make -C build test
 
 os:
   - linux
-
