--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ addons:
     sources:
     - kalakris-cmake
     - boost-latest
+    - ubuntu-toolchain-r-test
     - llvm-toolchain-precise-3.5
     packages:
     - cmake
