--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ cache:
   directories:
   - deps
 
-script: cat /home/travis/build/hoangmle/metaSMT/build/cov-int/build-log.txt
+script: echo "DONE"
 
 after_success:
   - make -C build test
