--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ addons:
     - llvm-toolchain-precise-3.5
     packages:
     - cmake
-    - libboost1.55-all-dev
+    - libboost1.55-dev
     - g++-4.8
     - gcc-4.8
     - clang-3.5
