--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ addons:
     packages:
     - cmake
     - libboost1.55-dev
+    - libboost-program-options1.55-dev
     - g++-4.8
     - gcc-4.8
     - clang-3.5
