--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules )
 set(Boost_NO_BOOST_CMAKE true)
 set(Boost_NO_SYSTEM_PATHS true)
 set(Boost_ADDITIONAL_VERSIONS "1.50.0")
-find_package(Boost)
+find_package(Boost COMPONENTS program_options)
 
 if(NOT ${Boost_FOUND})
   message(FATAL_ERROR "Boost could not be found.")
