include support for boolector 1.x again

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -234,7 +234,12 @@ if(Boolector_FOUND)
   config_find(Boolector ${Boolector_DIR})
   list(APPEND metaSMT_LIBS ${Boolector_LIBRARIES})
   list(APPEND metaSMT_INCLUDES ${Boolector_INCLUDE_DIR})
-  set(metaSMT_CXXFLAGS "${metaSMT_CXXFLAGS} ${Boolector_CXXFLAGS}")
+  if ((Boolector_VERSION VERSION_GREATER 2) OR (Boolector_VERSION VERSION_EQUAL 2))
+    message( STATUS "Use Boolector v2" )
+  else()
+    message( STATUS "Use Boolector v1" )
+    add_definitions(-DmetaSMT_BOOLECTOR_1_API)
+  endif()
 endif()
 
 if(Z3_FOUND)
