fix to compile with boolector 1.x

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -238,8 +238,9 @@ if(Boolector_FOUND)
     message( STATUS "Use Boolector v2" )
   else()
     message( STATUS "Use Boolector v1" )
-    set(metaSMT_CXXFLAGS "${metaSMT_CXXFLAGS} -DmetaSMT_BOOLECTOR_1_API")
+    set(Boolector_CXXFLAGS "${Boolector_CXXFLAGS} -DmetaSMT_BOOLECTOR_1_API")
   endif()
+  set(metaSMT_CXXFLAGS "${metaSMT_CXXFLAGS} ${Boolector_CXXFLAGS}")
 endif()
 
 if(Z3_FOUND)
