remove unused boost deps

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules )
 set(Boost_NO_BOOST_CMAKE true)
 set(Boost_NO_SYSTEM_PATHS true)
 set(Boost_ADDITIONAL_VERSIONS "1.50.0")
-find_package(Boost COMPONENTS program_options)
+find_package(Boost)
 
 if(NOT ${Boost_FOUND})
   message(FATAL_ERROR "Boost could not be found.")
@@ -296,18 +296,6 @@ if (Lingeling_FOUND)
   list(APPEND metaSMT_LIBS ${Lingeling_LIBRARIES})
   list(APPEND metaSMT_INCLUDES ${Lingeling_INCLUDE_DIR})
 endif ()
-
-if( Boost_IOSTREAMS_FOUND )
-  list(APPEND metaSMT_LIBS ${Boost_IOSTREAMS_LIBRARY})
-endif()
-
-if( Boost_THREAD_FOUND )
-  list(APPEND metaSMT_LIBS ${Boost_THREAD_LIBRARY})
-endif()
-
-if( Boost_SYSTEM_FOUND )
-  list(APPEND metaSMT_LIBS ${Boost_SYSTEM_LIBRARY})
-endif()
 
 ############################################################
 ############# RPATH ########################################
