switch to a simple stp version without cmsat & program_options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,7 +92,6 @@ set_package_info(Z3 "solver for various SMT theories")
 
 if(metaSMT_USE_STP)
   find_package(STP QUIET)
-  find_package(cryptominisat4 QUIET)
 else()
   set(STP_FOUND 0)
 endif()
@@ -249,11 +248,10 @@ if(Z3_FOUND)
   list(APPEND metaSMT_INCLUDES ${Z3_INCLUDE_DIR})
 endif()
 
-if(STP_FOUND AND cryptominisat4_FOUND)
+if(STP_FOUND)
   config_find(STP ${STP_DIR})
-  config_find(cryptominisat4 ${cryptominisat4_DIR})
-  message( STATUS "STP_LIBRARIES: ${STP_SHARED_LIBRARY} ${CRYPTOMINISAT4_LIBRARIES}" )
-  list(APPEND metaSMT_LIBS ${STP_SHARED_LIBRARY} ${CRYPTOMINISAT4_LIBRARIES})
+  message( STATUS "STP_LIBRARIES: ${STP_SHARED_LIBRARY}" )
+  list(APPEND metaSMT_LIBS ${STP_SHARED_LIBRARY})
   message( STATUS "STP_INCLUDE_DIR: ${STP_INCLUDE_DIRS}" )
   list(APPEND metaSMT_INCLUDES ${STP_INCLUDE_DIRS})
 else()
