--- a/cmake/metaSMT.makefile.in
+++ b/cmake/metaSMT.makefile.in
@@ -1,3 +1,5 @@
 metaSMT_INCLUDES  := @metaSMT_MINCLUDES@
 metaSMT_LIBRARIES := @metaSMT_MLIBS@
 metaSMT_CXXFLAGS  := @metaSMT_CXXFLAGS@
+metaSMT_LDFLAGS   := @metaSMT_LDFLAGS@
+metaSMT_LDLIBS    := @metaSMT_LDLIBS@
