--- a/.travis.yml
+++ b/.travis.yml
@@ -12,13 +12,13 @@ addons:
     - kalakris-cmake
     - ubuntu-toolchain-r-test
     - boost-latest
-    - llvm-toolchain-precise-3.5
+#    - llvm-toolchain-precise-3.5
     packages:
     - cmake
     - libboost1.55-dev
     - g++-4.8
     - gcc-4.8
-    - clang-3.5
+#    - clang-3.5
     - libgmp-dev
 
 cache:
@@ -31,7 +31,8 @@ before_install:
   - git clone https://github.com/agra-uni-bremen/dependencies.git
   - export BOOST_ROOT=/usr
   - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8" DEPS="deps-gcc"; fi
-  - if [[ "${CXX}" == "clang++" ]]; then export CXX="clang++-3.5" CC="clang-3.5" DEPS="deps-clang"; fi
+#  - if [[ "${CXX}" == "clang++" ]]; then export CXX="clang++-3.5" CC="clang-3.5" DEPS="deps-clang"; fi
+  - if [[ "${CXX}" == "clang++" ]]; then export DEPS="deps-clang"; fi
   - ./bootstrap.sh --deps ${DEPS} --free --non-free --academic -m RELEASE build/
 
 before_script:
