include Yices2 with qf_abv support by @nbruns1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,6 +49,7 @@ option(metaSMT_USE_Boolector  "try to use Boolector solver" on)
 option(metaSMT_USE_Z3         "try to use Z3 solver" on)
 option(metaSMT_USE_STP        "try to use STP solver" on)
 option(metaSMT_USE_CVC4        "try to use CVC4 solver" on)
+option(metaSMT_USE_YICES2     "try to use Yices2 solver" on)
 option(metaSMT_USE_CUDD       "try to use CUDD BDD package" on )
 option(metaSMT_USE_MiniSat    "try to use minisat SAT solver" on)  
 option(metaSMT_USE_picosat    "try to use picosat SAT solver" on)
@@ -89,6 +90,15 @@ else()
   set(Z3_FOUND 0)
 endif()
 set_package_info(Z3 "solver for various SMT theories")
+
+if (metaSMT_USE_YICES2)
+  find_package(YICES2 QUIET)
+  list(APPEND metaSMT_LIBS ${YICES2_LIBRARIES})
+  list(APPEND metaSMT_INCLUDES ${YICES2_INCLUDE_DIR})
+else()
+  set(YICES2_FOUND 0)
+endif()
+set_package_info(YICES2 "solver for various SMT theories")
 
 if(metaSMT_USE_STP)
   find_package(STP QUIET)
