--- a/cmake/metaSMT.makefile.in
+++ b/cmake/metaSMT.makefile.in
@@ -3,3 +3,4 @@ metaSMT_LIBRARIES := @metaSMT_MLIBS@
 metaSMT_CXXFLAGS  := @metaSMT_CXXFLAGS@
 metaSMT_LDFLAGS   := @metaSMT_LDFLAGS@
 metaSMT_LDLIBS    := @metaSMT_LDLIBS@
+metaSMT_AVAILABLE_QF_ABV_SOLVERS := @metaSMT_AVAILABLE_QF_ABV_SOLVERS@
