--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,11 +18,19 @@ set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake/Modules )
 
 set(Boost_NO_BOOST_CMAKE true)
 set(Boost_NO_SYSTEM_PATHS true)
-set(Boost_ADDITIONAL_VERSIONS "1.50.0")
 find_package(Boost)
 
 if(NOT ${Boost_FOUND})
   message(FATAL_ERROR "Boost could not be found.")
+endif()
+
+# From v1.57.0 Boost.Any does not require RTTI
+if (${Boost_VERSION} VERSION_LESS 105700)
+  message( STATUS "metaSMT requires RTTI" )
+  set(metaSMT_REQUIRE_RTTI true)
+else()
+  message( STATUS "metaSMT does not require RTTI" )
+  set(metaSMT_REQUIRE_RTTI false)
 endif()
 
 set_package_info(Boost "Portable C++ libraries")
