--- a/cmake/metaSMTConfig.cmake.in
+++ b/cmake/metaSMTConfig.cmake.in
@@ -11,4 +11,5 @@ get_filename_component(metaSMT_CONFIG_DIR "${CMAKE_CURRENT_LIST_FILE}" PATH)
 include("${metaSMT_CONFIG_DIR}/metaSMT.cmake" )
 set(metaSMT_CXXFLAGS "@metaSMT_CXXFLAGS@")
 
+set(metaSMT_REQUIRE_RTTI "@metaSMT_REQUIRE_RTTI@")
 set(metaSMT_AVAILABLE_QF_ABV_SOLVERS @metaSMT_AVAILABLE_QF_ABV_SOLVERS@)
