[Windows] require Z3 and disable all other solvers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ option(metaSMT_USE_STP        "try to use STP solver" on)
 option(metaSMT_USE_CVC4        "try to use CVC4 solver" on)
 option(metaSMT_USE_YICES2     "try to use Yices2 solver" on)
 option(metaSMT_USE_CUDD       "try to use CUDD BDD package" on )
-option(metaSMT_USE_MiniSat    "try to use minisat SAT solver" on)  
+option(metaSMT_USE_MiniSat    "try to use minisat SAT solver" on)
 option(metaSMT_USE_picosat    "try to use picosat SAT solver" on)
 option(metaSMT_USE_lingeling  "try to use lingeling SAT solver" on)
 option(metaSMT_USE_Aiger      "try to use aiger" on)
@@ -76,6 +76,20 @@ if ( NOT TIMEOUT )
   set(TIMEOUT 5 CACHE STRING "The timeout for tests")
 endif()
 
+if ( WIN32 )
+  message(STATUS "Windows build: disable all solvers except z3!" )
+  set(metaSMT_USE_SWORD off)
+  set(metaSMT_USE_Boolector  off)
+  set(metaSMT_USE_STP off)
+  set(metaSMT_USE_CVC4 off)
+  set(metaSMT_USE_YICES2 off)
+  set(metaSMT_USE_CUDD off)
+  set(metaSMT_USE_MiniSat off)
+  set(metaSMT_USE_picosat off)
+  set(metaSMT_USE_lingeling off)
+  set(metaSMT_USE_Aiger off)
+  set(metaSMT_USE_CW off)
+endif()
 
 if(metaSMT_USE_SWORD AND NOT APPLE)
   find_package(SWORD QUIET)
@@ -220,6 +234,9 @@ if(CVC4_FOUND)
   endif()
 endif()
 
+if( WIN32 AND NOT Z3_FOUND )
+  message(FATAL_ERROR "Windows build: Z3 is required but cannot be found!")
+endif()
 
 if (metaSMT_DOC_Doxygen)
   find_package(Doxygen)
