cmake modifications for Windows environment (tested with VS2017-RC)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ endif()
 set_package_info(Boolector "solver for SMT QF_BV and Arrays")
 
 if (metaSMT_USE_Z3)
-	find_package(Z3 QUIET)
+  find_package(Z3 QUIET)
 else()
   set(Z3_FOUND 0)
 endif()
@@ -163,13 +163,26 @@ else()
 endif()
 
 if(Z3_FOUND)
-  find_package(OpenMP QUIET)
-  find_package(Threads QUIET)
-  find_library(RT_LIB rt)
-  set(Z3_LIBRARIES ${Z3_LIBRARIES} ${OpenMP_CXX_FLAGS} ${RT_LIB} ${CMAKE_THREAD_LIBS_INIT})
+  find_package(OpenMP)
+  if (OPENMP_FOUND)
+    set(Z3_CXXFLAGS ${OpenMP_CXX_FLAGS})
+    if (UNIX)
+      list(APPEND Z3_LIBRARIES ${OpenMP_CXX_FLAGS})
+    endif()
+    message(STATUS "Use Z3 with OpenMP")
+  else()
+    message(STATUS "Use Z3 without OpenMP")
+  endif()
+
+  if (UNIX)
+    find_package(Threads QUIET)
+    find_library(RT_LIB rt)
+    set(Z3_LIBRARIES ${Z3_LIBRARIES} ${RT_LIB} ${CMAKE_THREAD_LIBS_INIT})
+  endif()
 
   include(CheckCXXSourceRuns)
 
+  set(CMAKE_REQUIRED_FLAGS ${Z3_CXXFLAGS})
   set(CMAKE_REQUIRED_INCLUDES ${Z3_INCLUDE_DIR})
   set(CMAKE_REQUIRED_LIBRARIES ${Z3_LIBRARIES})
 
@@ -236,6 +249,7 @@ if(Z3_FOUND)
   config_find(Z3 ${Z3_DIR})
   list(APPEND metaSMT_LIBS ${Z3_LIBRARIES})
   list(APPEND metaSMT_INCLUDES ${Z3_INCLUDE_DIR})
+  set(metaSMT_CXXFLAGS "${metaSMT_CXXFLAGS} ${Z3_CXXFLAGS}")
   list(APPEND metaSMT_AVAILABLE_QF_ABV_SOLVERS "Z3")
 endif()
 
