add travis entry for metaSMT_REQUIRE_CXX11=off

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ sudo: false
 env:
 - metaSMTConfig="--academic"                                            # boolector with lingeling and minisat
                                                                         # yices2
+- metaSMTConfig="--academic -DmetaSMT_REQUIRE_CXX11=off"                # now without C++11
+                                                                        # 
 - metaSMTConfig="-b Z3-4.4.1"                                           # z3
 - metaSMTConfig="-b cvc4-1.5pre-smtcomp2016"                            # cvc4
 - metaSMTConfig="-b stp-git-basic -b cryptominisat-git -b minisat-git"  # stp with cryptominisat and minisat
