change cvc4 version

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ env:
 - metaSMTConfig="--academic -DmetaSMT_REQUIRE_CXX11=off"                # now without C++11
                                                                         # 
 - metaSMTConfig="-b Z3-4.4.1"                                           # z3
-- metaSMTConfig="-b cvc4-1.5pre-smtcomp2016"                            # cvc4
+- metaSMTConfig="-b cvc4-smtcomp2015-stable"                            # cvc4
 - metaSMTConfig="-b stp-git-basic -b cryptominisat-git -b minisat-git"  # stp with cryptominisat and minisat
 - metaSMTConfig="--non-free"                                            # sword
 - metaSMTConfig="-b aiger-20071012 -b picosat-936 -b cudd-2.4.2"        # others
@@ -22,7 +22,7 @@ matrix:
   - compiler: gcc
     env: metaSMTConfig="-b Z3-4.4.1"
   - compiler: gcc
-    env: metaSMTConfig="-b cvc4-1.5pre-smtcomp2016"
+    env: metaSMTConfig="-b cvc4-smtcomp2015-stable"
   - compiler: clang
     env: metaSMTConfig="--non-free"
   - compiler: clang
