--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: cpp
-
+dist: trusty
 sudo: false
 
 env:
@@ -31,16 +31,12 @@ matrix:
 addons:
   apt:
     sources:
-    - kalakris-cmake
     - ubuntu-toolchain-r-test
     - boost-latest
-#    - llvm-toolchain-precise-3.5
     packages:
-    - cmake
     - libboost1.55-dev
     - g++-4.8
     - gcc-4.8
-#    - clang-3.5
     - libgmp-dev
     - gperf # required by yices2
 
@@ -54,7 +50,6 @@ before_install:
   - git clone https://github.com/agra-uni-bremen/dependencies.git
   - export BOOST_ROOT=/usr
   - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8" DEPS="deps-gcc"; fi
-#  - if [[ "${CXX}" == "clang++" ]]; then export CXX="clang++-3.5" CC="clang-3.5" DEPS="deps-clang"; fi
   - if [[ "${CXX}" == "clang++" ]]; then export DEPS="deps-clang"; fi
   - ./bootstrap.sh --deps ${DEPS} ${metaSMTConfig} -m RELEASE build/
 
