test Z3 on travis with gcc-4.8 (which supports openmp) instead of clang-3.5 (which does not)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ compiler:
 
 matrix:
   exclude:
-  - compiler: gcc
+  - compiler: clang
     env: metaSMTConfig="-b Z3-4.4.1"
   - compiler: gcc
     env: metaSMTConfig="-b cvc4-smtcomp2015-stable"
