add travis entry for boost-1.60.0

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ env:
 - metaSMTConfig="-b cvc4-smtcomp2015-stable"                            # cvc4
 - metaSMTConfig="-b stp-git-basic -b cryptominisat-git -b minisat-git"  # stp with cryptominisat and minisat
 - metaSMTConfig="--non-free"                                            # sword
+- metaSMTConfig="--non-free" BOOST_VERSION=1.60.0                       # sword
 - metaSMTConfig="-b aiger-20071012 -b picosat-936 -b cudd-2.4.2"        # others
 
 compiler:
@@ -25,6 +26,8 @@ matrix:
     env: metaSMTConfig="-b cvc4-smtcomp2015-stable"
   - compiler: clang
     env: metaSMTConfig="--non-free"
+  - compiler: clang
+    env: metaSMTConfig="--non-free" BOOST_VERSION=1.60.0
   - compiler: clang
     env: metaSMTConfig="-b aiger-20071012 -b picosat-936 -b cudd-2.4.2"
 
@@ -48,7 +51,16 @@ cache:
 
 before_install:
   - git clone https://github.com/agra-uni-bremen/dependencies.git
-  - export BOOST_ROOT=/usr
+  - |
+      if [[ "${BOOST_VERSION}" != "" ]]; then
+        BOOST_DIR=`pwd`/boost-${BOOST_VERSION}
+        BOOST_URL="http://sourceforge.net/projects/boost/files/boost/${BOOST_VERSION}/boost_${BOOST_VERSION//\./_}.tar.gz"
+        mkdir -p ${BOOST_DIR}
+        { travis_retry wget --quiet -O - ${BOOST_URL} | tar --strip-components=1 -xz -C ${BOOST_DIR}; } || exit 1
+        export BOOST_ROOT=${BOOST_DIR}
+      else
+        export BOOST_ROOT=/usr
+      fi
   - if [[ "${CXX}" == "g++" ]]; then export CXX="g++-4.8" CC="gcc-4.8" DEPS="deps-gcc"; fi
   - if [[ "${CXX}" == "clang++" ]]; then export DEPS="deps-clang"; fi
   - ./bootstrap.sh --deps ${DEPS} ${metaSMTConfig} -m RELEASE build/
