--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -3,10 +3,7 @@ add_library(metaSMT STATIC
 )
 
 target_link_libraries(metaSMT ${metaSMT_LIBS})
-if( CMAKE_COMPILER_IS_GNUCC OR ("${CMAKE_CXX_COMPILER_ID}" MATCHES Clang))
-set_target_properties(metaSMT PROPERTIES COMPILE_FLAGS "-fPIC -g0 -O3")
-endif()
-
+set_target_properties(metaSMT PROPERTIES POSITION_INDEPENDENT_CODE on)
 
 install(TARGETS metaSMT 
   EXPORT metaSMT
