add support for STP with CryptoMiniSat

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -273,6 +273,12 @@ if(STP_FOUND)
   message( STATUS "STP_INCLUDE_DIR: ${STP_INCLUDE_DIRS}" )
   list(APPEND metaSMT_INCLUDES ${STP_INCLUDE_DIRS})
   list(APPEND metaSMT_AVAILABLE_QF_ABV_SOLVERS "STP")
+
+  find_package(cryptominisat5 QUIET)
+  if (cryptominisat5_FOUND)
+    message(STATUS "Use STP with CryptoMiniSat5")
+    list(APPEND metaSMT_LIBS ${CRYPTOMINISAT5_LIBRARIES} ${CRYPTOMINISAT5_STATIC_LIBRARIES_DEPS})
+  endif()
 else()
   set( STP_FOUND 0 )
 endif()
