--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -245,7 +245,11 @@ if(Boolector_FOUND)
   list(APPEND metaSMT_LIBS ${Boolector_LIBRARIES})
   list(APPEND metaSMT_INCLUDES ${Boolector_INCLUDE_DIR})
   if ((Boolector_VERSION VERSION_GREATER 2) OR (Boolector_VERSION VERSION_EQUAL 2))
-    message( STATUS "Use Boolector v2" )
+    message( STATUS "Use Boolector ${Boolector_VERSION}" )
+    if ((Boolector_VERSION VERSION_GREATER 2.2.0))
+      message( STATUS "Use Boolector v2 new API" )
+      set(Boolector_CXXFLAGS "${Boolector_CXXFLAGS} -DmetaSMT_BOOLECTOR_2_NEW_API")
+    endif()
   else()
     message( STATUS "Use Boolector v1" )
     set(Boolector_CXXFLAGS "${Boolector_CXXFLAGS} -DmetaSMT_BOOLECTOR_1_API")
