--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,6 +15,13 @@ build:
 configuration:
   - Debug
 
+# specify custom environment variables
+environment:
+  MSVC_DEFAULT_OPTIONS: ON
+  CMAKE_URL: https://cmake.org/files/v3.7/cmake-3.7.2-win64-x64.zip
+  Z3_URL: https://github.com/Z3Prover/z3/releases/download/z3-4.5.0/z3-4.5.0-x86-win.zip
+  BOOST_URL: https://sourceforge.net/projects/boost/files/boost/1.63.0/boost_1_63_0.7z/download
+
 install:
   ############################################################################
   # All external dependencies are installed in C:\projects\deps
@@ -25,23 +32,19 @@ install:
   ############################################################################
   # Install a recent CMake
   ############################################################################
-  - set CMAKE_URL="https://cmake.org/files/v3.7/cmake-3.7.2-win64-x64.zip"
   - appveyor DownloadFile %CMAKE_URL% -FileName cmake.zip
   - 7z x cmake.zip -oC:\projects\deps > nul
   - move C:\projects\deps\cmake-* C:\projects\deps\cmake # Move to a version-agnostic directory
   - set PATH=C:\projects\deps\cmake\bin;%PATH%
   - cmake --version
   # Install z3
-  - set Z3_URL="https://github.com/Z3Prover/z3/releases/download/z3-4.5.0/z3-4.5.0-x86-win.zip"
   - appveyor DownloadFile %Z3_URL% -FileName z3-4.5.0-x86-win.zip
   - 7z x z3-4.5.0-x86-win.zip -oC:\projects\deps > nul
   - cp "C:\projects\metaSMT\.windows\Z3Config.cmake" "C:\projects\deps\z3-4.5.0-x86-win"
   - set PATH=C:\projects\deps\z3-4.5.0-x86-win\bin;%PATH%
   # Install boost
-  - set BOOST_URL="https://sourceforge.net/projects/boost/files/boost-binaries/1.60.0/boost_1_60_0-msvc-14.0-32.exe/download"
-  - appveyor DownloadFile %BOOST_URL% -FileName boost.exe
-  - boost.exe /DIR="C:\projects\deps\boost" /silent
-  - set PATH=C:\projects\deps\boost\lib32-msvc-14.0;%PATH%
+  - appveyor DownloadFile %BOOST_URL% -FileName boost_1_63_0.7z
+  - 7z x boost_1_63_0.7z -oC:\projects\deps > nul
 
 before_build:
   - call "%VS140COMNTOOLS%VsDevCmd.bat"
@@ -50,6 +53,6 @@ before_build:
 build_script:
   - mkdir build
   - cd build
-  - cmake .. -DBoost_USE_STATIC_LIBS=ON -DBOOST_ROOT="C:\projects\deps\boost" -DZ3_DIR="C:\projects\deps\z3-4.5.0-x86-win" 
+  - cmake .. -DBOOST_ROOT="C:\projects\deps\boost_1_63_0" -DZ3_DIR="C:\projects\deps\z3-4.5.0-x86-win"
   - cmake --build .
-  - ctest
+  - ctest -VV
