--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,7 +185,7 @@ if(Z3_FOUND)
   find_package(OpenMP)
   if (OPENMP_FOUND)
     set(Z3_CXXFLAGS ${OpenMP_CXX_FLAGS})
-    if (UNIX)
+    if (UNIX OR MSYS)
       list(APPEND Z3_LIBRARIES ${OpenMP_CXX_FLAGS})
     endif()
     message(STATUS "Use Z3 with OpenMP")
