--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -98,7 +98,13 @@ add_test_executable( direct_Boolector direct_Boolector.cpp
 
 add_test_executable( direct_Yices2 direct_Yices2.cpp REQUIRES YICES2_FOUND )
 
-add_test_executable( direct_Z3 direct_Z3.cpp REQUIRES Z3_FOUND )
+if (NOT Z3_CXXFLAGS)
+  set(Z3_CXXFLAGS "-DZ3_DUMMY_FLAG")
+endif()
+add_test_executable( direct_Z3 direct_Z3.cpp
+  REQUIRES Z3_FOUND
+  PROPERTIES COMPILE_FLAGS "${Z3_CXXFLAGS}"
+  )
 
 add_test_executable( direct_STP direct_STP.cpp REQUIRES STP_FOUND )
 
